cluster/apps/printers/aurora-endpoints.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: aurora-printer
  labels:
    kubernetes.io/service-name: aurora-printer
addressType: IPv4
endpoints:
  - addresses:
      - "10.1.11.169"
    conditions:
      ready: true
ports:
  - name: http
    protocol: TCP
    port: 80

---
apiVersion: v1
kind: Endpoints
metadata:
  name: aurora-printer
  namespace: default
subsets:
  - addresses:
      - ip: 10.1.11.169
    ports:
      - name: http
        port: 80
        protocol: TCP
