cluster/apps/printers/aurora-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aurora-printer
spec:
  selector:
    app.kubernetes.io/name: aurora-printer-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
