cluster/apps/printers/bastion-endpoints.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: bastion-printer
  labels:
    kubernetes.io/service-name: bastion-printer
addressType: IPv4
endpoints:
  - addresses:
      - "10.1.9.111"
    conditions:
      ready: true
ports:
  - name: http
    protocol: TCP
    port: 80

---
apiVersion: v1
kind: Endpoints
metadata:
  name: bastion-printer
  namespace: default
subsets:
  - addresses:
      - ip: 10.1.9.111
    ports:
      - name: http
        port: 80
        protocol: TCP
