cluster/apps/printers/bastion-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bastion-printer
spec:
  selector:
    app.kubernetes.io/name: bastion-printer-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
